--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "locals": {
-    "url": "http://localhost:8080",
+    "url": "http://experiences-politiques.fr",
     "name": "Expériences Politiques",
     "owner": "Adrian Gaudebert",
     "description": "Une semaine d'événements autour de la Politique au sens noble"
